--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,11 @@
-# Project exclude paths
-/target/
+# Compiled class file
+*.class
+*.iml
+
+#### IntelliJ IDEA dir config ####
+/.idea/
+/idea/
+
+#### IntelliJ IDEA out folder (compilation folder) ####
+/.out/
+/out/
